[package]
name = "rsomics-voterank"
version = "0.1.1"
edition = "2021"
description = "VoteRank influential-node ranking (Zhang et al. 2016) — value-exact port of networkx.voterank"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-voterank"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bioinformatics", "graph", "network", "centrality", "networkx"]
readme = "README.md"

[[bin]]
name = "rsomics-voterank"
path = "src/main.rs"

[lib]
name = "rsomics_voterank"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "bench"
harness = false
